get file from server
