# my-tour-server/swagger/swagger.json
@@ -176,6 +176,34 @@
             }
         },
         "/image/{uid}": {
+            "get": {
+                "tags": [
+                    "image"
+                ],
+                "description": "get image by uid",
+                "operationId": "ImageController.Get",
+                "parameters": [
+                    {
+                        "in": "path",
+                        "name": "uid",
+                        "description": "The key for image",
+                        "required": true,
+                        "type": "integer",
+                        "format": "int64"
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "",
+                        "schema": {
+                            "$ref": "#/definitions/models.Image"
+                        }
+                    },
+                    "403": {
+                        "description": ":uid is empty"
+                    }
+                }
+            },
             "delete": {
                 "tags": [
                     "image"
@@ -1226,6 +1254,23 @@
         }
     },
     "definitions": {
+        "models.Image": {
+            "title": "Image",
+            "type": "object",
+            "properties": {
+                "create_time": {
+                    "type": "string",
+                    "format": "datetime"
+                },
+                "id": {
+                    "type": "integer",
+                    "format": "int64"
+                },
+                "source": {
+                    "type": "string"
+                }
+            }
+        },
         "models.Object": {
             "title": "Object",
             "type": "object",
